// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly unknow theme type and fallback to defaults 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly unknow variant and fallback to standard 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-uxnngn-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffefe6;
  color: #cc4e18;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-uxnngn-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant filled 1`] = `
<DocumentFragment>
  .cache-ecun9c-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #dd3252;
  color: #ffffff;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-ecun9c-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-1xein4p-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #e1ebff;
  color: #1a4dbf;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-1xein4p-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant outlined 1`] = `
<DocumentFragment>
  .cache-19q2j4g-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  border: 1px solid #dd3252;
  color: #dd3252;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-19q2j4g-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant standard 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1jzo522-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #eafffb;
  color: #149a7b;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-1jzo522-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant transparent 1`] = `
<DocumentFragment>
  .cache-1a9x662-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: transparent;
  color: #dd3252;
  padding: 12px 0;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-1a9x662-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with title 1`] = `
<DocumentFragment>
  .cache-rgmdko-StyledContainer-alertStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #a6102d;
}

.cache-m9dycb-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
  margin-right: 16px;
}

.cache-db05j6-AlertContainer {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1pexr6x-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.cache-1sluwr9-StyledText-InheritedColorText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

<div
    class="cache-rgmdko-StyledContainer-alertStyles eenhiht3"
  >
    <svg
      aria-hidden="true"
      class="eenhiht2 cache-m9dycb-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="cache-db05j6-AlertContainer eenhiht1"
    >
      <p
        class="eenhiht0 cache-1pexr6x-StyledText-InheritedColorText e1tg3t120"
      >
        title
      </p>
      <p
        class="eenhiht0 cache-1sluwr9-StyledText-InheritedColorText e1tg3t120"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;
